new gh-pages version

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Nomad Couple</title>
-  <base href="/NomadCouple/">
+  <base href="/nomad-couple/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="title" content="Nomad Couple | Travel the world">
@@ -24,25 +24,13 @@
 <body>
   <app-root>Loading...</app-root>
 
-
-
-    <script src="vendor/es6-shim/es6-shim.js"></script>
-    <script src="vendor/reflect-metadata/Reflect.js"></script>
-    <script src="vendor/systemjs/dist/system.src.js"></script>
-    <script src="vendor/zone.js/dist/zone.js"></script>
-    <script>
-      System.import('system-config.js').then(function () {
-        System.import('main');
-      }).catch(console.error.bind(console));
-    </script>
-
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.1/web-animations.min.js"></script>
-    <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-    <script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.1/web-animations.min.js"></script>
+  <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+  <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
     ga('create', 'UA-78016218-2', 'auto');
     ga('send', 'pageview');
-    </script>
-    <script async src='https://www.google-analytics.com/analytics.js'></script>
-  </body>
+  </script>
+  <script async src='https://www.google-analytics.com/analytics.js'></script>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.9910be8eafe9eabeeeaa.bundle.js"></script><script type="text/javascript" src="main.0032650105c22e51f828.bundle.js"></script></body>
 </html>
